test/invalid/baseline/nonempty-sequence.txt
Syntax error at line 2 in nonempty-sequence.webidl, since `dictionary X`:
short> myfield = [3];
                  ^ Default sequence value must be empty
